# ethanol_plant_app

./: .gitignore  LICENSE  README.md  hooks.py  modules.txt  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  plant_api.py
ethanol_plant_app/ethanol_plant_app/page/clude_ai/: clude_ai.css  clude_ai.html  clude_ai.js  clude_ai.json
ethanol_plant_app/ethanol_plant_app/page/d_distillation/: d_distillation.css  d_distillation.html  d_distillation.js  d_distillation.json
ethanol_plant_app/ethanol_plant_app/page/d_evaporation/: d_evaporation.css  d_evaporation.html  d_evaporation.js  d_evaporation.json
ethanol_plant_app/ethanol_plant_app/page/d_liquef/: d_liquef.css  d_liquef.html  d_liquef.js  d_liquef.json
ethanol_plant_app/ethanol_plant_app/page/d_msdh/: d_msdh.css  d_msdh.html  d_msdh.js  d_msdh.json
ethanol_plant_app/ethanol_plant_app/page/dryer/: dryer.css  dryer.html  dryer.js  dryer.json
ethanol_plant_app/ethanol_plant_app/page/ethanol/: ethanol.css  ethanol.html  ethanol.js  ethanol.json
ethanol_plant_app/ethanol_plant_app/page/fermentation_withoutlab/: fermentation_withoutlab.css  fermentation_withoutlab.html  fermentation_withoutlab.js  fermentation_withoutlab.json
ethanol_plant_app/ethanol_plant_app/page/m_distillation/: m_distillation.css  m_distillation.html  m_distillation.js  m_distillation.json
ethanol_plant_app/ethanol_plant_app/page/mojj_shift/: mojj_shift.css  mojj_shift.html  (+2 more)
ethanol_plant_app/public/css/: ethanol_plant.css
ethanol_plant_app/templates/: __init__.py
pages/: __init__.py
public/js/: ethanol_plant.js
(+32 files in other folders)
