[project]
name = "ethanol_plant_app"
authors = [
    { name = "Ethanol Plant Team", email = "admin@ethanolplant.com" }
]
description = "SCADA-style dashboard for ethanol plant monitoring and control"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ethanol_plant_app"
